# ntu-2025fall-advanced-compiler-hw6-gyeozai

./: README.md
src/: CMakeLists.txt  LoopLICMPass.cpp  build.sh
tests/: analyze_results.sh  analyze_results_advanced.sh  run_tests.sh  test1_simple.c  test2_nested.c  test3_complex.c  test4_dependency.c  test5_safety.c
